--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -56,6 +56,11 @@
     box-shadow: inset 3px 0px 0px -1px #000;
   }
 
+  @media (min-width: 1024px) {
+    .lg\:self-end {
+      align-self: flex-end;
+    }
+  }
 }
 
 @layer utilities {
