--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -56,6 +56,24 @@
     box-shadow: inset 3px 0px 0px -1px #000;
   }
 
+  #checkout-form {
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    input:-webkit-autofill:active {
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: #000000;
+      transition: background-color 5000s ease-in-out 0s;
+      box-shadow: inset 0 0 20px 20px #000000;
+    }
+
+    /*Change text in autofill textbox*/
+    input:-webkit-autofill {
+      -webkit-text-fill-color: rgba(var(--simmer-yellow), 1) !important;
+      font-family: var(--font-fionas);
+    }
+  }
+
   @media (min-width: 1024px) {
     .lg\:self-end {
       align-self: flex-end;
