--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -57,7 +57,7 @@
     box-shadow: inset 3px 0px 0px -1px #000;
   }
 
-  #checkout-form {
+  .auto-fill-none {
     input:-webkit-autofill,
     input:-webkit-autofill:hover,
     input:-webkit-autofill:focus,
