--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -86,4 +86,9 @@
   .debug-outline {
     @apply bg-pink-400/10 outline-dashed outline-1 outline-pink-600;
   }
+
+  .disable-context-menu {
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+  }
 }
