--- a/src/app/(frontend)/globals.css
+++ b/src/app/(frontend)/globals.css
@@ -92,3 +92,15 @@
     -webkit-touch-callout: none;
   }
 }
+
+@media screen and (min-width: 1280px) and (min-aspect-ratio: 21/9) {
+  .container.h-full {
+    max-width: 1024px;
+  }
+}
+
+@media screen and (min-width: 1536px) and (min-aspect-ratio: 21/9) {
+  .container.h-full {
+    max-width: 1280px;
+  }
+}
